# ashborn-arena

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.specs/: design.md  notes.md  prd.md  state.md
backend/: ai_agent.py  main.py  sessions.py
backend/api/: ws_helpers.py
backend/inference/: __init__.py  inference_agent.py  model_loader.py
backend/tests/: test_api_rest.py  test_api_websocket.py  test_inference.py
engine/generation/: __init__.py  map_generator.py
engine/models/: __init__.py  ability.py  character.py  effect.py  grid.py  map_object.py
engine/systems/: __init__.py  battle.py  damage.py  effect_manager.py  elemental.py  initiative.py  line_of_sight.py  movement.py  opportunity.py  turn_manager.py
engine/tests/: test_ability.py  test_advanced_combat.py  test_battle.py  test_character.py  test_damage.py  test_effect_manager.py  test_elemental.py  test_grid.py  test_initiative.py  test_knockout.py  test_line_of_sight.py  test_los_interception.py  test_map_generator.py  test_map_object.py  test_movement.py  test_opportunity.py  test_turn_manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
logs/: train.out  training.jsonl
models/_phase_2/: archer.pt  assassin.pt  cleric.pt  critic.pt  mage.pt  warrior.pt
models/easy/: archer.pt  assassin.pt  cleric.pt  critic.pt  mage.pt  meta.json  warrior.pt
models/hard/: archer.pt  assassin.pt  cleric.pt  critic.pt  mage.pt  meta.json  warrior.pt
scripts/: train_background.sh
training/: train.py
(+129 files in other folders)
