[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashborn-arena"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pettingzoo>=1.24",
    "torch>=2.0",
    "tensorboard>=2.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["engine*", "backend*", "training*"]

[tool.pytest.ini_options]
testpaths = ["engine/tests", "backend/tests", "training/tests"]
